Revision history for Database-Abstraction

0.22
	Force _open/_log to be a private/protected method
	Use Params::Get

0.21	Tue Feb 11 07:45:15 EST 2025
	Fix "Not an ARRAY reference"

0.20	Thu Feb  6 20:29:09 EST 2025
	Fix the manifest

0.19	Thu Feb  6 20:19:07 EST 2025
	Fix selectall_hashref() in slurp mode when no_entry is set

0.18	Thu Feb  6 07:26:02 EST 2025
	Cache hits in list context returns a ref to the array, rather than the array itself

0.17	Tue Feb  4 15:32:43 EST 2025
	Support expires_in for compatability with CHI
	Added cache support to AUTOLOAD
	Allow the logger to be a filename
	When the logger is a reference to code, give more information
	Added the 'filename' property
	Don't attempt to slurp files when col_names is set

0.16	Sun Jan 12 12:15:01 EST 2025
	fetchrow_hashref() - when no_entry is not set allow just one argument to be given: the entry value

0.15	Thu Jan  9 19:43:43 EST 2025
	Improved handling of empty values in slurp mode
	AUTOLOAD: error on invalid column name in slurp mode

0.14	Fri Jan  3 11:17:11 EST 2025
	Added the dbname argument

0.13	Sun Dec 22 13:30:13 EST 2024
	Refactor logger helper routines
	Fix "Bad table or column name: 'entryIS NOT NULL' has chars not alphanumeric or underscore"
	Added t/30-basics.t

0.12	Wed Dec  4 08:19:09 EST 2024
	Move the synopsis document around for clarity
	Allow the logger to be a ref to code

0.11	Thu Nov  7 10:44:24 EST 2024
	Added id parameter
	Slurp small XML files using XML::Simple
	Fix uninitialised error when slurp_file doesn't exist
	Use features of File::pfopen version 0.03

0.10	Thu Sep 19 08:17:55 EDT 2024
	Added t/init.t
	The constructor now honours 'sep_char'
	Test no_entry files
	Added CircleCI and Codecov

0.09	Mon Jun 24 20:42:48 EDT 2024
	Added t/chi.t
	selectall_hash: speed up slurp mode when 'entry' is one of the parameters
	execute: add the table name to the query

0.08	Mon May 20 08:43:08 EDT 2024
	Add unique as a synonym for distinct
	Allow max_slurp_size to be tweaked