@@ -1,4 +1,5 @@
 Changes
+config.yaml
 data/test1.csv
 data/test2.psv
 data/test3.xml
