@@ -51,7 +51,8 @@ WriteMakefile(
 		'File::pfopen' => 0.03,
 		'File::Temp' => 0,
 		'Params::Get' => 0,
-		'Scalar::Util' => 0
+		'Scalar::Util' => 0,
+		'YAML::XS' => 0,
 	}, dist => $dist,
 	clean		=> { FILES => 'Database-Abstraction-*' },
 	# META_ADD => {
