@@ -3,6 +3,7 @@ Revision history for Database-Abstraction
 0.22
 	Force _open/_log to be a private/protected method
 	Use Params::Get
+	Added config_file argument to new()
 
 0.21	Tue Feb 11 07:45:15 EST 2025
 	Fix "Not an ARRAY reference"
